--- a/index.html
+++ b/index.html
@@ -1320,7 +1320,7 @@
                 <div class="about-image">
                     <div class="about-img-container card-3d">
                         <!-- Remplacez le contenu ci-dessous par votre photo -->
-                        <img src="images/photo.jpg" alt="Mohamed Omar Baouch" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 10px;" id="profile-photo">
+                        <img src="photo.jpg" alt="Mohamed Omar Baouch" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 10px;" id="profile-photo">
                     </div>
                 </div>
                 <div class="about-text">
