--- a/index.html
+++ b/index.html
@@ -1446,7 +1446,7 @@
                 <div class="about-image">
                     <div class="about-img-container card-3d">
                         <!-- Remplacez le contenu ci-dessous par votre photo -->
-                        <img data-src="images/photo.jpg" alt="Mohamed Omar Baouch" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 10px;" class="lazy-image" id="profile-photo">
+                        <img data-src="photo.jpg" alt="Mohamed Omar Baouch" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 10px;" class="lazy-image" id="profile-photo">
                     </div>
                 </div>
                 <div class="about-text">
