--- a/index.html
+++ b/index.html
@@ -2004,7 +2004,7 @@
                 };
                 
                 // Send email using EmailJS
-                emailjs.send('service_w29506o', 'template_vn674kc', templateParams)
+                emailjs.send('service_w29506o', 'template_2mkwm8s', templateParams)
                     .then(function(response) {
                         console.log('SUCCESS!', response.status, response.text);
                         
