--- a/index.html
+++ b/index.html
@@ -2077,7 +2077,7 @@
                     </div>
                     
                     <!-- Téléchargement du CV -->
-                    <a href="BAOUCH_CV.PDF" download class="btn btn-primary" style="margin-top: 30px; position: relative; z-index: 50; cursor: pointer !important; display: inline-flex; align-items: center;">
+                    <a href="BAOUCH_CV.pdf" download class="btn btn-primary" style="margin-top: 30px; position: relative; z-index: 50; cursor: pointer !important; display: inline-flex; align-items: center;">
                         <span>Télécharger mon CV</span>
                         <svg width="20" height="20" viewBox="0 0 24 24" style="margin-left: 8px; vertical-align: middle;">
                             <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 14v-4H8l4-4 4 4h-3v4h-2z"/>
