--- a/index.html
+++ b/index.html
@@ -2320,7 +2320,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Adresse</h4>
-                            <p>75 Rue D'Ostawals, 67200 Strasbourg</p>
+                            <p>67200 Strasbourg</p>
                         </div>
                     </div>
                     <div class="contact-item">
