Add modern design with animated gradient and values section

--- a/index.html
+++ b/index.html
@@ -8,129 +8,17 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
-    <style>
-      :root {
-        --primary: #0077cc;
-        --text: #333333;
-        --bg: #ffffff;
-        --light-bg: #f5f5f5;
-      }
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        font-family: "Poppins", sans-serif;
-        color: var(--text);
-        background: var(--bg);
-        line-height: 1.6;
-      }
-      header,
-      section {
-        padding: 60px 20px;
-      }
-      .container {
-        max-width: 1100px;
-        margin: auto;
-      }
-      header {
-        background: var(--primary);
-        color: #fff;
-        text-align: center;
-        padding: 80px 20px;
-      }
-      header h1 {
-        font-size: 2.8rem;
-        margin-bottom: 10px;
-      }
-      header p {
-        font-size: 1.2rem;
-        margin-bottom: 30px;
-      }
-      header .btn {
-        display: inline-block;
-        padding: 10px 25px;
-        background: #fff;
-        color: var(--primary);
-        border-radius: 4px;
-        text-decoration: none;
-        font-weight: 600;
-      }
-      h2.section-title {
-        font-size: 2rem;
-        margin-bottom: 30px;
-        color: var(--primary);
-      }
-      .about {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        gap: 40px;
-      }
-      .about img {
-        max-width: 250px;
-        border-radius: 8px;
-      }
-      .about-text {
-        flex: 1;
-        min-width: 250px;
-      }
-      .experience-item,
-      .education-item {
-        margin-bottom: 30px;
-      }
-      .skills-list {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 15px;
-      }
-      .skill {
-        background: var(--light-bg);
-        padding: 15px;
-        border-radius: 6px;
-        text-align: center;
-      }
-      form .form-group {
-        margin-bottom: 15px;
-      }
-      form label {
-        display: block;
-        margin-bottom: 5px;
-      }
-      form input,
-      form textarea {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      form button {
-        background: var(--primary);
-        color: #fff;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      footer {
-        background: var(--light-bg);
-        text-align: center;
-        padding: 20px;
-      }
-      footer a {
-        color: var(--primary);
-        text-decoration: none;
-      }
-      @media (max-width: 600px) {
-        header h1 {
-          font-size: 2rem;
-        }
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-1VKChG5YpAC0JKodtEReyMwqyZIVlY5Pja/qvpDMAYA9YV3gCBXlI3VzBkYOPxfN3E3xaQa58aeYqCAdzGz0rQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="reveal">
       <div class="container">
         <h1>Mohamed Omar Baouch</h1>
         <p>Ingénieur mécanique & consultant PDM/PLM</p>
@@ -139,7 +27,7 @@
       </div>
     </header>
 
-    <section id="about">
+    <section id="about" class="reveal">
       <div class="container about">
         <img src="photo.jpg" alt="Mohamed Omar Baouch" />
         <div class="about-text">
@@ -154,7 +42,7 @@
       </div>
     </section>
 
-    <section id="experience">
+    <section id="experience" class="reveal">
       <div class="container">
         <h2 class="section-title">Expérience</h2>
         <div class="experience-item">
@@ -181,7 +69,7 @@
       </div>
     </section>
 
-    <section id="skills">
+    <section id="skills" class="reveal">
       <div class="container">
         <h2 class="section-title">Compétences</h2>
         <div class="skills-list">
@@ -192,7 +80,30 @@
       </div>
     </section>
 
-    <section id="education">
+    <section id="values" class="reveal">
+      <div class="container">
+        <h2 class="section-title">Valeurs</h2>
+        <div class="values">
+          <div class="value-item">
+            <i class="fas fa-handshake"></i>
+            <h3>Authenticité</h3>
+            <p>Des relations honnêtes et transparentes.</p>
+          </div>
+          <div class="value-item">
+            <i class="fas fa-lightbulb"></i>
+            <h3>Innovation</h3>
+            <p>Une recherche continue de solutions créatives.</p>
+          </div>
+          <div class="value-item">
+            <i class="fas fa-rocket"></i>
+            <h3>Excellence</h3>
+            <p>Un engagement pour un travail professionnel de haute qualité.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="education" class="reveal">
       <div class="container">
         <h2 class="section-title">Formation</h2>
         <div class="education-item">
@@ -210,7 +121,7 @@
       </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="reveal">
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <form
@@ -238,7 +149,7 @@
       </div>
     </section>
 
-    <footer>
+    <footer class="reveal">
       <div class="container">
         &copy; 2025 Mohamed Omar Baouch. Tous droits réservés. |
         <a
@@ -248,5 +159,7 @@
         >
       </div>
     </footer>
+
+    <script defer src="script.js"></script>
   </body>
 </html>
