feat: add dark mode and project showcase

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button id="theme-toggle" aria-label="Changer de thème">
+      <i class="fas fa-moon"></i>
+    </button>
     <header class="reveal">
       <div class="container">
         <h1>Mohamed Omar Baouch</h1>
@@ -76,6 +79,36 @@
           <div class="skill">Solutions PDM/PLM</div>
           <div class="skill">Conception &amp; Simulation</div>
           <div class="skill">Méthodologies de projet</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="reveal">
+      <div class="container">
+        <h2 class="section-title">Projets</h2>
+        <div class="projects">
+          <div class="project-card">
+            <h3>Implémentation PDM</h3>
+            <p>
+              Déploiement d'une solution SOLIDWORKS PDM pour un groupe
+              industriel avec formation des utilisateurs et automatisation des
+              flux de données.
+            </p>
+          </div>
+          <div class="project-card">
+            <h3>Optimisation de module radar</h3>
+            <p>
+              Conception mécanique et validation par calcul pour améliorer la
+              fiabilité d'un système radar embarqué.
+            </p>
+          </div>
+          <div class="project-card">
+            <h3>Outillage plastique</h3>
+            <p>
+              Étude et réalisation d'outillage pour pièces thermoplastiques dans
+              le secteur automobile.
+            </p>
+          </div>
         </div>
       </div>
     </section>
