--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       <i class="fas fa-moon"></i>
     </button>
     <header class="reveal">
+      <div class="shapes">
+        <span class="shape"></span>
+        <span class="shape"></span>
+        <span class="shape"></span>
+        <span class="shape"></span>
+        <span class="shape"></span>
+      </div>
       <div class="container">
         <h1>Mohamed Omar Baouch</h1>
         <p>Ingénieur mécanique & consultant PDM/PLM</p>
