--- a/index.html
+++ b/index.html
@@ -2318,7 +2318,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Langues</h4>
-                            <p>Anglais (Courant), Allemand (Débutant)</p>
+                            <p>Arabe (Natale), Français (Bilingue), Anglais (Courant), Allemand (Débutant)</p>
                         </div>
                     </div>
                 </div>
