--- a/index.html
+++ b/index.html
@@ -1,6 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Mohamed Omar Baouch",
+      "url": "https://baouch.fr",
+      "image": "https://baouch.fr/baouch.jpeg", // Assurez-vous que le nom du fichier est correct
+      "jobTitle": "Ingénieur & Consultant PDM/PLM",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "VISIATIV"
+      },
+      "alumniOf": [
+        {
+          "@type": "CollegeOrUniversity",
+          "name": "INSA STRASBOURG"
+        },
+        {
+          "@type": "CollegeOrUniversity",
+          "name": "UFR MIM"
+        }
+      ],
+      "knowsAbout": [
+        "PDM (Product Data Management)",
+        "PLM (Product Lifecycle Management)",
+        "SolidWorks PDM",
+        "3DEXPERIENCE",
+        "PTC Windchill",
+        "Gestion du cycle de vie produit",
+        "Conception Mécanique"
+      ],
+      "sameAs": [
+        "https://www.linkedin.com/in/mohamed-omar-baouch-9b4473180/"
+      ]
+    }
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohamed Omar Baouch | Ingénieur & Consultant PDM/PLM</title>
@@ -2008,7 +2044,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="about-img-container card-3d">
-                        <img data-src="photo.jpeg" alt="Mohamed Omar Baouch" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 10px;" class="lazy-image" id="profile-photo">
+                        <img data-src="baouch.jpeg" alt="Mohamed Omar Baouch" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 10px;" class="lazy-image" id="profile-photo">
                     </div>
                 </div>
                 <div class="about-text">
