--- a/index.html
+++ b/index.html
@@ -2178,9 +2178,9 @@
                         </div>
                     </div>
 
-                    <a href="/BAOUCH_CV_FR.pdf" download class="btn btn-primary"
+                    <a href="/BAOUCH_CV_FR.pdf"  class="btn btn-primary"
                         style="margin-top: 30px; position: relative; z-index: 50; cursor: pointer !important; display: inline-flex; align-items: center;">
-                        <span data-translate-key="download_cv">Télécharger mon CV</span>
+                        <span data-translate-key="_cv">Télécharger mon CV</span>
                         <svg width="20" height="20" viewBox="0 0 24 24"
                             style="margin-left: 8px; vertical-align: middle;">
                             <path fill="currentColor"
@@ -2566,7 +2566,7 @@
                 "tooltip_mobility": "Mobile pour des déplacements professionnels",
                 "tooltip_email": "N'hésitez pas à me contacter par email pour toute demande",
                 "tooltip_linkedin": "Connectons-nous sur LinkedIn pour échanger professionnellement",
-                "download_cv": "Télécharger mon CV",
+                "_cv": "Télécharger mon CV",
                 "cv_file": "/BAOUCH_CV_FR.pdf",
                 // Experience
                 "experience_title": "Expérience",
@@ -2664,11 +2664,11 @@
                 "about_p2": "With strong expertise in mechanical design and product lifecycle management, I guide organizations through their digital transformation and the improvement of their workflows.",
                 "tooltip_location": "Based in the Grand Est region, available for projects throughout France",
                 "tooltip_phone": "Available by phone Monday to Friday, 9am-6pm",
-                "driving_license": "Driver's License, Car Owner",
+                "driving_license": "Driver's License",
                 "tooltip_mobility": "Available for business travel",
                 "tooltip_email": "Feel free to contact me by email for any inquiries",
                 "tooltip_linkedin": "Let's connect on LinkedIn for professional exchanges",
-                "download_cv": "Download CV",
+                "download_cv": "Download RESUME",
                 "cv_file": "/BAOUCH_CV_EN.pdf",
                 // Experience
                 "experience_title": "Experience",
