feat(blog): setup automated blog system with integrated css

--- a/index.html
+++ b/index.html
@@ -2350,6 +2350,7 @@
                     <li><a href="#skills" class="nav-link" data-translate-key="nav_skills">Compétences</a></li>
                     <li><a href="#education" class="nav-link" data-translate-key="nav_education">Formation</a></li>
                     <li><a href="#contact" class="nav-link" data-translate-key="nav_contact">Contact</a></li>
+                    <li><a href="/blog/" class="nav-link">Blog</a></li>
                 </ul>
                 <div class="language-switcher">
                     <button id="lang-fr" class="lang-btn active">FR</button>
