--- a/index.html
+++ b/index.html
@@ -4378,6 +4378,7 @@
 
 
 });
+        // Initialize all functions when page loads with error handling
         document.addEventListener('DOMContentLoaded', () => {
             initializeLanguage();
 
@@ -4431,7 +4432,7 @@
                     }
                 }
             });
-        
+        });
     </script>
 </body>
 
