--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="fr">
 
 <head>
+        <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PBLRK58T');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohamed Omar Baouch | Ingénieur & Consultant PDM/PLM</title>
@@ -2296,8 +2298,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PBLRK58T"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <canvas id="transition-canvas"></canvas>
 
     <div class="perspective-wrapper">
@@ -2988,6 +2992,7 @@
 
         const translations = {
             fr: {
+                // ... (toutes vos traductions FR existantes)
                 "meta_title": "Mohamed Omar Baouch | Ingénieur & Consultant PDM/PLM",
                 "meta_description": "Portfolio de Mohamed Omar Baouch - Ingénieur mécanique et consultant PDM/PLM spécialisé dans l'optimisation des processus de développement produit",
                 "loading_portfolio": "CHARGEMENT DU PORTFOLIO",
@@ -3078,6 +3083,7 @@
                 "form_success": "Votre message a été envoyé avec succès ! Je vous répondrai dans les plus brefs délais.",
                 "form_error": "Une erreur s'est produite lors de l'envoi du message. Veuillez réessayer ou me contacter directement par email.",
                 "footer_copyright": "&copy; 2025 Mohamed Omar Baouch. Tous droits réservés.",
+                // Traductions pour l'assistant IA
                 "ai_title": "Assistant Virtuel",
                 "ai_welcome": "Bonjour ! Je suis l'assistant virtuel de Mohamed. Comment puis-je vous aider à découvrir son profil ? Voici quelques suggestions :",
                 "ai_sugg_1": "Résume son expérience",
@@ -3085,6 +3091,7 @@
                 "ai_sugg_3": "Où a-t-il étudié ?"
             },
             en: {
+                // ... (toutes vos traductions EN existantes)
                 "meta_title": "Mohamed Omar Baouch | Mechanical Engineer & PDM/PLM Consultant",
                 "meta_description": "Portfolio of Mohamed Omar Baouch - Mechanical engineer and PDM/PLM consultant specializing in optimizing product development processes",
                 "loading_portfolio": "LOADING PORTFOLIO",
@@ -3175,6 +3182,7 @@
                 "form_success": "Your message has been sent successfully! I will get back to you as soon as possible.",
                 "form_error": "An error occurred while sending the message. Please try again or contact me directly by email.",
                 "footer_copyright": "&copy; 2025 Mohamed Omar Baouch. All rights reserved.",
+                // Translations for AI Assistant
                 "ai_title": "Virtual Assistant",
                 "ai_welcome": "Hello! I am Mohamed's virtual assistant. How can I help you explore his profile? Here are a few suggestions:",
                 "ai_sugg_1": "Summarize his experience",
@@ -4377,7 +4385,6 @@
         }
 
 
-});
         // Initialize all functions when page loads with error handling
         document.addEventListener('DOMContentLoaded', () => {
             initializeLanguage();
