--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Mohamed Omar Baouch",
+        "alternateName": "Baouch",
         "url": "https://baouch.fr",
         "image": "https://baouch.fr/baouch.jpeg",
         "jobTitle": "Ingénieur & Consultant PDM/PLM",
