--- a/blog-template.html
+++ b/blog-template.html
@@ -10,28 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog | Mohamed Omar Baouch</title> <meta name="description" content="Blog de Mohamed Omar Baouch sur le PDM/PLM et l'ingénierie.">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <style>
-        /* Styles spécifiques au blog, que vous aviez dans les fichiers générés */
-        .blog-container { max-width: 900px; margin: 120px auto 40px !important; padding: 20px; }
-        .section { background-color: var(--bg-secondary); border-radius: 10px; padding: 2rem 3rem; box-shadow: 0 15px 35px rgba(0,0,0,0.3); border: 1px solid var(--bg-tertiary); }
-        .title { font-size: 2.5rem; color: var(--accent-primary); margin-bottom: 0.5rem; border-bottom: 2px solid var(--accent-secondary); padding-bottom: 0.5rem; display: inline-block; }
-        .meta { color: var(--text-secondary); margin-bottom: 2.5rem; font-style: italic; }
-        .post-item { border-bottom: 1px solid var(--bg-tertiary); padding: 1.5rem 0; transition: background-color 0.3s ease; margin: 0 -3rem; padding: 1.5rem 3rem; }
-        .post-item:last-child { border-bottom: none; }
-        .post-item:hover { background-color: var(--hover-color); }
-        .subtitle { margin: 0 0 0.5rem 0; font-size: 1.25rem; }
-        .subtitle a { color: var(--text-primary); text-decoration: none; transition: color 0.3s; }
-        .subtitle a:hover { color: var(--accent-primary); }
-        .post-item .meta { font-size: 0.85rem; margin-bottom: 0.5rem; color: var(--text-secondary); }
-        .post-item img { max-width: 100%; border-radius: 5px; margin-top: 1rem; margin-bottom: 0.5rem; }
-        .back { margin-top: 2rem; }
-        .back a { color: var(--accent-secondary); font-weight: 500; text-decoration: none; transition: color 0.3s; }
-        .back a:hover { color: var(--accent-primary); }
-        .post-list { list-style: none; padding: 0; }
-        .post-list-item { background-color: var(--hover-color); margin-bottom: 1rem; border-radius: 5px; transition: transform 0.3s ease, box-shadow 0.3s ease; }
-        .post-list-item:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(0,0,0,0.3); }
-        .post-list-item a { display: block; padding: 1rem 1.5rem; color: var(--text-primary); text-decoration: none; font-weight: 500; }
-    </style>
+    <link rel="stylesheet" href="/assets/css/blog.css">
 </head>
 <body class="blog-page">
     <canvas id="transition-canvas"></canvas>
@@ -75,7 +54,9 @@
     </div>
 
     <main id="mainContainer" class="container blog-container show">
-        {{BLOG_CONTENT}}
+        <div class="blog-shell" id="blogShell">
+            {{BLOG_CONTENT}}
+        </div>
     </main>
 
     <footer>
@@ -97,5 +78,6 @@
         </div>
 
     <script src="/assets/js/script.js"></script>
+    <script type="module" src="/assets/js/blog.js"></script>
 </body>
 </html>
