--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <li><a href="#skills" class="nav-link" data-translate-key="nav_skills">Compétences</a></li>
                     <li><a href="#education" class="nav-link" data-translate-key="nav_education">Formation</a></li>
                     <li><a href="#contact" class="nav-link" data-translate-key="nav_contact">Contact</a></li>
-                    <li><a href="/blog/" class="nav-link">Blog</a></li>
+                    <li><a href="/blog/" class="nav-link" data-translate-key="nav_blog">Blog</a></li>
                 </ul>
                 <div class="language-switcher">
                     <button id="lang-fr" class="lang-btn active">FR</button>
@@ -270,7 +270,7 @@
                                 LinkedIn pour échanger professionnellement</span>
                         </div>
                     </div>
-                    <a href="/BAOUCH_CV_FR.pdf" class="btn btn-primary"
+                    <a href="/BAOUCH_CV_FR.pdf" class="btn btn-primary" data-cv-link
                         style="margin-top: 30px; position: relative; z-index: 50; cursor: pointer !important; display: inline-flex; align-items: center;">
                         <span data-translate-key="download_cv">Télécharger mon CV</span>
                         <svg width="20" height="20" viewBox="0 0 24 24"
