Improve scroll performance and motion preferences

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="about-img-container card-3d">
-                        <img data-src="baouch.jpeg" alt="Mohamed Omar Baouch"
+                        <img data-src="baouch.jpeg" alt="Mohamed Omar Baouch" loading="lazy"
                             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 10px;"
                             class="lazy-image" id="profile-photo">
                     </div>
