--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     })(window,document,'script','dataLayer','GTM-PBLRK58T');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laboratoire personnel de Mohamed Omar Baouch</title>
+    <title>Mohamed Omar Baouch | Ingénieur & Consultant PDM/PLM</title>
     <meta name="description"
-        content="Laboratoire personnel de Mohamed Omar Baouch : manifeste, recherches en cours, journal de veille et expérimentations autour du PDM/PLM, de l'IA et des systèmes de connaissance.">
+        content="Portfolio de Mohamed Omar Baouch - Ingénieur mécanique et consultant PDM/PLM spécialisé dans l'optimisation des processus de développement produit">
     <meta name="keywords"
-        content="laboratoire personnel, veille, R&D individuelle, PDM, PLM, IA, design d'expérience, journal de bord">
+        content="PDM, PLM, SolidWorks, ingénieur mécanique, consultant, VISIATIV, gestion du cycle de vie produit">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -30,7 +30,7 @@
         "alternateName": "Baouch",
         "url": "https://baouch.fr",
         "image": "https://baouch.fr/baouch.jpeg",
-        "jobTitle": "Fondateur du laboratoire personnel",
+        "jobTitle": "Ingénieur & Consultant PDM/PLM",
         "worksFor": {
             "@type": "Organization",
             "name": "VISIATIV"
@@ -123,16 +123,16 @@
             </div>
             <div class="hero-content">
                 <h1 class="hero-title" data-translate-key="hero_title">
-                    <span class="highlight glitch" data-text="Laboratoire personnel">Laboratoire personnel</span><br>
-                    <span class="glitch" data-text="Explorations & veille">Explorations & veille</span>
+                    <span class="highlight glitch" data-text="Ingénieur Mécanique">Ingénieur Mécanique</span> & <br>
+                    Consultant <span class="glitch" data-text="PDM/PLM">PDM/PLM</span>
                 </h1>
                 <p class="hero-subtitle" data-translate-key="hero_subtitle">
-                    Un manifeste vivant où je documente mes expérimentations, mes protocoles de veille et ma recherche personnelle.
+                    Expertise en conception, implémentation de solutions PDM et gestion du cycle de vie produit
                 </p>
                 <div class="hero-cta">
-                    <a href="/BAOUCH_CV_FR.pdf" class="btn btn-primary" data-translate-key="hero_cta1" target="_blank" rel="noopener">Accéder à mon CV</a>
-                    <a href="#research" class="btn btn-secondary" data-translate-key="hero_cta2">Recherches en cours</a>
-                    <a href="/blog/" class="btn btn-tertiary" data-translate-key="hero_cta3">Journal de veille</a>
+                    <a href="#contact" class="btn btn-primary" data-translate-key="hero_cta1">Me contacter</a>
+                    <a href="#experience" class="btn btn-secondary" data-translate-key="hero_cta2">Découvrir mon
+                        parcours</a>
                 </div>
             </div>
             <div class="scroll-indicator" id="scrollIndicator">
@@ -140,7 +140,6 @@
                 <div class="scroll-icon"></div>
             </div>
         </section>
-        <div id="research" class="anchor-target" aria-hidden="true"></div>
         <section id="about" class="fade-up parallax">
             <div class="parallax-layer" data-depth="0.2">
                 <div class="floating-tech" style="position: absolute; top: 10%; left: 5%; opacity: 0.05;">
