Enhance hero call-to-action presentation

--- a/index.html
+++ b/index.html
@@ -113,9 +113,15 @@
                     <p class="hero-subtitle" data-translate-key="hero_subtitle">
                         Expertise en conception, implémentation de solutions PDM et gestion du cycle de vie produit
                     </p>
-                    <div class="hero-actions">
+                    <div class="hero-actions hero-cta">
                         <a href="#contact" class="btn btn-primary" data-translate-key="hero_cta1">Me contacter</a>
                         <a href="#experience" class="btn btn-outline" data-translate-key="hero_cta2">Découvrir mon parcours</a>
+                    </div>
+                    <div class="scroll-indicator" aria-hidden="true">
+                        <span class="scroll-indicator__label" data-translate-key="scroll_text">Défiler</span>
+                        <span class="scroll-indicator__track">
+                            <span class="scroll-indicator__dot"></span>
+                        </span>
                     </div>
                 </div>
                 <aside class="hero-panel">
