Simplify blog experience and add essentials section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,61 @@
                 <div class="scroll-icon"></div>
             </div>
         </section>
+        <section class="essentials">
+            <div class="essentials__header">
+                <div>
+                    <p class="section-eyebrow">Expérience terrain</p>
+                    <h2>Un accompagnement PDM/PLM plus épuré</h2>
+                    <p class="section-lead">Je nettoie vos flux de données produit, formalise les standards d'équipe et documente les meilleures pratiques dans des guides courts.</p>
+                </div>
+                <div class="essentials__stats">
+                    <div class="mini-stat">
+                        <span class="mini-stat__value">10+ projets</span>
+                        <span class="mini-stat__label">Déploiements et migrations PDM</span>
+                    </div>
+                    <div class="mini-stat">
+                        <span class="mini-stat__value">72h</span>
+                        <span class="mini-stat__label">Pour livrer un radar et un plan d'action</span>
+                    </div>
+                    <div class="mini-stat">
+                        <span class="mini-stat__value">Guides</span>
+                        <span class="mini-stat__label">Templates prêts à l'emploi pour vos équipes</span>
+                    </div>
+                </div>
+            </div>
+            <div class="essentials__grid">
+                <article class="essentials-card">
+                    <p class="card-kicker">Conseil</p>
+                    <h3>Architecture PDM/PLM claire</h3>
+                    <p>Cartographie rapide, choix des droits, modèles de données et nomenclatures simplifiées pour SolidWorks PDM, 3DEXPERIENCE ou Windchill.</p>
+                    <ul>
+                        <li>Ateliers de cadrage et audit express</li>
+                        <li>Plan de remédiation priorisé</li>
+                        <li>Documentation maintenable</li>
+                    </ul>
+                </article>
+                <article class="essentials-card">
+                    <p class="card-kicker">Delivery</p>
+                    <h3>Recettes et industrialisation</h3>
+                    <p>Mise en production accompagnée : procédures de tests, checklists d'intégration, et coaching des référents internes.</p>
+                    <ul>
+                        <li>Scénarios de validation prêts</li>
+                        <li>Revues avec les métiers</li>
+                        <li>Capitalisation et transfert</li>
+                    </ul>
+                </article>
+                <article class="essentials-card">
+                    <p class="card-kicker">Veille</p>
+                    <h3>Radar quotidien &amp; blog</h3>
+                    <p>Un format épuré qui combine signaux du marché, résumés techniques et réponses aux questions fréquentes des équipes BE/IT.</p>
+                    <ul>
+                        <li>Radars quotidiens PDM/PLM</li>
+                        <li>Guides de fond réutilisables</li>
+                        <li><a href="/blog/">Accéder au blog</a></li>
+                    </ul>
+                </article>
+            </div>
+        </section>
         <section id="about" class="fade-up parallax">
             <div class="parallax-layer" data-depth="0.2">
                 <div class="floating-tech" style="position: absolute; top: 10%; left: 5%; opacity: 0.05;">
