fix: correct migration description to PDM version upgrades

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                     </div>
                     <div class="mini-stat animate-count" data-target="57">
                         <span class="mini-stat__value" data-translate-key="stat_migrations">57 migrations</span>
-                        <span class="mini-stat__label" data-translate-key="stat_migrations_desc">PDM Standard →
-                            Professional</span>
+                        <span class="mini-stat__label" data-translate-key="stat_migrations_desc">Mises à jour de version
+                            PDM</span>
                     </div>
                     <div class="mini-stat">
                         <span class="mini-stat__value" data-translate-key="stat_diagnostic">72h</span>
