fix: align Education section milestone dots and ping animations

--- a/index.html
+++ b/index.html
@@ -1031,8 +1031,8 @@
                             <div class="w-6 h-6 rounded-full shadow-lg group-hover:scale-150 transition-transform duration-300"
                                 style="background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary)); box-shadow: 0 4px 15px color-mix(in srgb, var(--accent-primary) 50%, transparent)">
                             </div>
-                            <div class="absolute inset-0 w-6 h-6 rounded-full animate-ping opacity-25"
-                                style="background: var(--accent-primary)"></div>
+                            <div class="absolute -inset-2 rounded-full opacity-50 animate-ping"
+                                style="border: 2px solid var(--accent-primary)"></div>
                         </div>
 
                         <!-- Content -->
@@ -1078,6 +1078,9 @@
                         <div class="relative z-10 mb-6">
                             <div class="w-6 h-6 rounded-full shadow-lg group-hover:scale-150 transition-transform duration-300"
                                 style="background: color-mix(in srgb, var(--accent-primary) 70%, var(--accent-secondary)); box-shadow: 0 4px 15px color-mix(in srgb, var(--accent-secondary) 50%, transparent)">
+                            </div>
+                            <div class="absolute -inset-2 rounded-full opacity-50 animate-ping"
+                                style="border: 2px solid color-mix(in srgb, var(--accent-primary) 70%, var(--accent-secondary))">
                             </div>
                         </div>
 
