--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
 
                 <!-- Timeline items -->
                 <div
-                    class="flex flex-col md:flex-row justify-between items-start md:items-center gap-12 md:gap-4 relative">
+                    class="flex flex-col md:flex-row justify-between items-stretch md:items-start gap-12 md:gap-4 relative">
 
                     <!-- Education 1 -->
                     <div class="group flex-1 flex flex-col items-center opacity-0 animate-fade-in-up stagger-1">
