--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
             .glass { @apply backdrop-blur-md bg-white/10 border border-white/20; }
             .glass-dark { @apply backdrop-blur-md bg-black/10 border border-black/10; }
             .gradient-border { background: linear-gradient(var(--bg-color), var(--bg-color)) padding-box, linear-gradient(135deg, var(--accent-primary), var(--accent-secondary)) border-box; border: 2px solid transparent; }
-            .text-gradient { @apply bg-clip-text text-transparent bg-gradient-to-r from-[#2f6e9b] to-[#6b8caf]; }
+            .text-gradient { background: var(--accent-gradient); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent; }
             .hover-lift { @apply transition-all duration-300 hover:-translate-y-2 hover:shadow-xl; }
-            .hover-glow { @apply transition-all duration-300 hover:shadow-[0_0_30px_rgba(47,110,155,0.3)]; }
+            .hover-glow { transition: all 0.3s; box-shadow: 0 0 0 transparent; }
+            .hover-glow:hover { box-shadow: 0 0 30px color-mix(in srgb, var(--accent-primary) 30%, transparent); }
             .stagger-1 { animation-delay: 0.1s; }
             .stagger-2 { animation-delay: 0.2s; }
             .stagger-3 { animation-delay: 0.3s; }
@@ -118,6 +119,12 @@
 </head>
 
 <body>
+    <!-- Premium Tailwind-Inspired Background Effects -->
+    <div class="bg-orb bg-orb--1" aria-hidden="true"></div>
+    <div class="bg-orb bg-orb--2" aria-hidden="true"></div>
+    <div class="bg-orb bg-orb--3" aria-hidden="true"></div>
+    <div class="bg-grid" aria-hidden="true"></div>
+
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PBLRK58T" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <canvas id="transition-canvas"></canvas>
@@ -385,7 +392,7 @@
                             <span
                                 class="project-icon text-3xl group-hover:scale-125 transition-transform duration-300">⚡</span>
                             <div
-                                class="project-type px-2 py-0.5 text-xs font-medium rounded bg-amber-500/10 text-amber-600">
+                                class="project-type px-2 py-0.5 text-xs font-medium rounded bg-[#2f6e9b]/10 text-[#6b8caf]">
                                 Déploiement</div>
                         </div>
                         <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">ASPIR ELEC</h5>
@@ -395,11 +402,11 @@
                             méthodologie de reprise de données Excel</p>
                         <div class="project-tags relative z-10 flex flex-wrap gap-2 mt-3">
                             <span
-                                class="px-2 py-1 text-xs rounded-full bg-amber-500/10 hover:bg-amber-500/20 transition-colors cursor-default">Templates</span>
+                                class="px-2 py-1 text-xs rounded-full bg-[#2f6e9b]/10 hover:bg-[#2f6e9b]/20 transition-colors cursor-default">Templates</span>
                             <span
-                                class="px-2 py-1 text-xs rounded-full bg-amber-500/10 hover:bg-amber-500/20 transition-colors cursor-default">DTE</span>
+                                class="px-2 py-1 text-xs rounded-full bg-[#2f6e9b]/10 hover:bg-[#2f6e9b]/20 transition-colors cursor-default">DTE</span>
                             <span
-                                class="px-2 py-1 text-xs rounded-full bg-amber-500/10 hover:bg-amber-500/20 transition-colors cursor-default">Formation</span>
+                                class="px-2 py-1 text-xs rounded-full bg-[#2f6e9b]/10 hover:bg-[#2f6e9b]/20 transition-colors cursor-default">Formation</span>
                         </div>
                     </div>
                     <div
@@ -415,7 +422,7 @@
                                 Migration</div>
                         </div>
                         <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">WEBER Industries</h5>
-                        <p class="project-subtitle relative z-10">PDM Standard → Professional</p>
+                        <p class="project-subtitle relative z-10">Migration & Upgrade</p>
                         <p class="project-desc relative z-10">Migration complète avec upgrade serveur, reconfiguration
                             workflows,
                             formation utilisateurs</p>
@@ -515,7 +522,7 @@
                 </div>
                 <div class="about-text">
                     <p class="highlight-hover" data-translate-key="about_p1">
-                        <strong>Ingénieur Mécatronique INSA</strong> de formation, j'ai transformé mon expertise
+                        <strong>Ingénieur Mécanique INSA</strong> de formation, j'ai transformé mon expertise
                         technique en une spécialisation pointue sur les systèmes <strong>PDM/PLM</strong>. Je ne me
                         contente pas d'installer des logiciels : je conçois des architectures de données pérennes.
                     </p>
@@ -675,7 +682,7 @@
                                         class="flex-shrink-0 w-8 h-8 rounded-lg flex items-center justify-center font-bold text-sm"
                                         style="background: color-mix(in srgb, var(--accent-primary) 15%, transparent); color: var(--accent-primary)">57</span>
                                     <span style="color: var(--text-secondary)" data-translate-key="exp1_li1">Migrations
-                                        PDM Standard → Professional</span>
+                                        de serveur & Mises à jour</span>
                                 </div>
                                 <div class="flex items-start gap-3 p-2 rounded-lg transition-colors">
                                     <span
@@ -856,17 +863,17 @@
                                 class="transition-all duration-1000" />
                             <defs>
                                 <linearGradient id="gradient2" x1="0%" y1="0%" x2="100%" y2="0%">
-                                    <stop offset="0%" stop-color="#f59e0b" />
-                                    <stop offset="100%" stop-color="#f97316" />
+                                    <stop offset="0%" stop-color="#2f6e9b" />
+                                    <stop offset="100%" stop-color="#6b8caf" />
                                 </linearGradient>
                             </defs>
                         </svg>
                         <div class="absolute inset-0 flex flex-col items-center justify-center">
                             <span
-                                class="text-3xl font-bold text-amber-500 group-hover:scale-110 transition-transform">85%</span>
+                                class="text-3xl font-bold text-[#2f6e9b] group-hover:scale-110 transition-transform">85%</span>
                             <span class="text-xs text-gray-500 uppercase tracking-wider">Expert</span>
                         </div>
-                        <div class="absolute -top-2 -right-2 w-12 h-12 rounded-full bg-gradient-to-br from-amber-500 to-orange-500 flex items-center justify-center shadow-lg animate-bounce-subtle"
+                        <div class="absolute -top-2 -right-2 w-12 h-12 rounded-full bg-gradient-to-br from-[#2f6e9b] to-[#6b8caf] flex items-center justify-center shadow-lg animate-bounce-subtle"
                             style="animation-delay: 0.3s">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="text-white">
                                 <path d="M4 4h16v16H4z" stroke="currentColor" stroke-width="1.5" />
@@ -874,23 +881,23 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="text-xl font-semibold mb-4 group-hover:text-amber-500 transition-colors"
+                    <h3 class="text-xl font-semibold mb-4 group-hover:text-[#2f6e9b] transition-colors"
                         data-translate-key="skill2_title">Data & Migration</h3>
                     <div class="flex flex-wrap justify-center gap-2 max-w-xs">
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-amber-500/10 text-amber-600 hover:bg-amber-500 hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#6b8caf] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
                             data-translate-key="skill2_li1">ETL</span>
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-amber-500/10 text-amber-600 hover:bg-amber-500 hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#6b8caf] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
                             data-translate-key="skill2_li2">Nettoyage Données</span>
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-amber-500/10 text-amber-600 hover:bg-amber-500 hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#6b8caf] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
                             data-translate-key="skill2_li3">Templates SW</span>
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-amber-500/10 text-amber-600 hover:bg-amber-500 hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#6b8caf] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
                             data-translate-key="skill2_li4">MyCADTools</span>
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-amber-500/10 text-amber-600 hover:bg-amber-500 hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1">Property
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#6b8caf] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1">Property
                             Tab</span>
                     </div>
                 </div>
@@ -959,7 +966,7 @@
                         PDM</span>
                     <span class="text-gray-400">•</span>
                     <span
-                        class="text-2xl font-bold text-gray-300 dark:text-gray-600 whitespace-nowrap hover:text-amber-500 transition-colors cursor-default">SQL
+                        class="text-2xl font-bold text-gray-300 dark:text-gray-600 whitespace-nowrap hover:text-[#2f6e9b] transition-colors cursor-default">SQL
                         Server</span>
                     <span class="text-gray-400">•</span>
                     <span
@@ -982,7 +989,7 @@
                         PDM</span>
                     <span class="text-gray-400">•</span>
                     <span
-                        class="text-2xl font-bold text-gray-300 dark:text-gray-600 whitespace-nowrap hover:text-amber-500 transition-colors cursor-default">SQL
+                        class="text-2xl font-bold text-gray-300 dark:text-gray-600 whitespace-nowrap hover:text-[#2f6e9b] transition-colors cursor-default">SQL
                         Server</span>
                     <span class="text-gray-400">•</span>
                     <span
