Update Architecture PDM/SQL skill colors to orange

--- a/index.html
+++ b/index.html
@@ -804,20 +804,20 @@
                                 class="transition-all duration-1000 group-hover:stroke-dashoffset-0" />
                             <defs>
                                 <linearGradient id="gradient1" x1="0%" y1="0%" x2="100%" y2="0%">
-                                    <stop offset="0%" stop-color="#2f6e9b" />
-                                    <stop offset="100%" stop-color="#6b8caf" />
+                                    <stop offset="0%" stop-color="#f97316" />
+                                    <stop offset="100%" stop-color="#fb923c" />
                                 </linearGradient>
                             </defs>
                         </svg>
                         <!-- Center content -->
                         <div class="absolute inset-0 flex flex-col items-center justify-center">
                             <span
-                                class="text-3xl font-bold text-[#2f6e9b] group-hover:scale-110 transition-transform">90%</span>
-                            <span class="text-xs text-gray-500 uppercase tracking-wider">Expert</span>
+                                class="text-3xl font-bold text-[#f97316] group-hover:scale-110 transition-transform">90%</span>
+                            <span class="text-xs text-[#f97316] uppercase tracking-wider">Expert</span>
                         </div>
                         <!-- Floating icon -->
                         <div
-                            class="absolute -top-2 -right-2 w-12 h-12 rounded-full bg-gradient-to-br from-[#2f6e9b] to-[#6b8caf] flex items-center justify-center shadow-lg animate-bounce-subtle">
+                            class="absolute -top-2 -right-2 w-12 h-12 rounded-full bg-gradient-to-br from-[#f97316] to-[#fb923c] flex items-center justify-center shadow-lg animate-bounce-subtle">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" class="text-white">
                                 <path d="M12 2L2 7L12 12L22 7L12 2Z" stroke="currentColor" stroke-width="1.5"
                                     stroke-linecap="round" stroke-linejoin="round" />
@@ -828,24 +828,24 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="text-xl font-semibold mb-4 group-hover:text-[#2f6e9b] transition-colors"
+                    <h3 class="text-xl font-semibold mb-4 text-[#f97316] transition-colors"
                         data-translate-key="skill1_title">Architecture PDM/SQL</h3>
                     <!-- Floating Pills -->
                     <div class="flex flex-wrap justify-center gap-2 max-w-xs">
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#2f6e9b] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#f97316]/10 text-[#f97316] hover:bg-[#f97316] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
                             data-translate-key="skill1_li1">Admin SQL Server</span>
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#2f6e9b] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#f97316]/10 text-[#f97316] hover:bg-[#f97316] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
                             data-translate-key="skill1_li2">Réplication</span>
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#2f6e9b] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#f97316]/10 text-[#f97316] hover:bg-[#f97316] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
                             data-translate-key="skill1_li3">Workflows Avancés</span>
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#2f6e9b] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#f97316]/10 text-[#f97316] hover:bg-[#f97316] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1"
                             data-translate-key="skill1_li4">PDM Gateway</span>
                         <span
-                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#2f6e9b]/10 text-[#2f6e9b] hover:bg-[#2f6e9b] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1">Cold
+                            class="skill-pill px-3 py-1.5 text-sm rounded-full bg-[#f97316]/10 text-[#f97316] hover:bg-[#f97316] hover:text-white transition-all cursor-default hover:scale-105 hover:-translate-y-1">Cold
                             Storage</span>
                     </div>
                 </div>
